--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
-<html>
-    <head>
-        
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <img src="" alt="">
+        <ul></ul>
+        <li></li>
+    </header>
+</body>
 </html>
