--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             <li></li>
             <li></li>
         </ul>
-        
+    </header>
+    <section class="secao1">
+        <h1>nossa história <h1>
     </header>
 </body>
 </html>
